--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
   <form id="intake-form" enctype="multipart/form-data">
     <h1>🌐 Web Design Client Intake Form</h1>
     <p>Thank you for choosing us to bring your vision to life! Please complete this form to the best of your ability.</p>
-
+    
     <section id="basic-info">
       <h2>1. Basic Information</h2>
       <label>Full Name</label>
@@ -174,6 +175,9 @@
       <h2>10. Anything Else?</h2>
       <textarea name="additional_info"></textarea>
     </section>
+
+    <!-- status message placeholder -->
+    <div id="status" class="status"></div>
 
     <button type="submit">📎 Submit Form</button>
     <p>Accepted: JPG, PNG, DOCX, PDF. Max file size: 10 MB</p>
